--- a/index.html
+++ b/index.html
@@ -74,15 +74,13 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        From obtaining my BSC Business Information Systems degree I have been in the IT industry for over 8 years, covering the basics from hardware all the way through to data warehousing and application development and deployment in the defence sector. I have been part of many projects both small and large which involved a vast array of technologies. I am working with the MERN stack on the Azure platform but have exposure to other lanuages and cloud infrastructures<br>
+                        After obtaining my BSc Business Information Systems degree I have been in the IT industry for over 12 years, covering the basics from hardware all the way through to data warehousing and software development. I have been part of many projects both small and large which span across a vast array of technologies using both the waterfall and agile methodologies.<br>
                         <br>
-                        I have experience working with SME's working on projects from as small as email deployment, CRM development, website development through to full scale web application builds. I have also worked for corporate organisations using oracle ERP solutions to achieve change management and data consolidation. Currently I am working in the defence sector building custom web applications in a secure manor on Microsoft Azure.<br>
+                        I have a strong foundation in software development within lanuages such as HTML, CSS and Javascript. Over the last two years I have worked on projects that utilised the React framework, Node backend and the Mongo database. I am a MERN stack developer and strive everyday to push my skills to the limit in finding better ways to tackle business problems through software applications.<br>
                         <br>
-                        In my current role as a software developer I work in a team of highly skilled developers building a fleet of custom applications that ensure the customer can work securely at all times. Using the MERN stack, I build secure and scalable applications that both intertwine and work independantly. Using linux VM's to develop in, to then deploy to other environments through CI/CD pipelines, I am able to create and maintian a fully automated working environment.<br>
+                        In an effort to further develop my full stack skillset, I actively participate in infrastructure conversations and decisions that are being made which affect us developers. To better place myself in these discussions, I have achieved a certification in Azure fundamentals. I have also worked on complex infrastructure projects using methods and technologies such as ARM, Terraform, ansible and much more.<br>
                         <br>
-                        In my previous role as a consultant I acquired software language skills enabling me to completely customise managed CRM/ERP solutions such as <a href="https://www.oracle.com/technetwork/middleware/bi-foundation/fdmee-tuning-1112x-2349440.pdf" target="_blank">Oracle FDMEE</a> and <a href="https://www.oracle.com/middleware/technologies/data-relationship-management.html" target="_blank">Oracle DRM</a>, achieving the clients specific requirements. In the past I mainly focused on plain JavaScript but quickly started to see the benefits of other technologies/languages in both front-end development and languages such as JavaScript and Jython. <br>
-                        <br>
-                        Currently I am focusing on strengthening my full stack skills while learning other lanuages such as Python. I have invested many hours in developing futher infrastructure skills and I am looking to take my Microsoft Azure fundementals exam in the near future.
+                        I would like to work towards a career goal in becoming an experienced consulant who has the necessary wealth of technical experience, a missing role in industry today. 
                     </p>
 
                     <a href="mailto:am.inspiredsolutions@gmail.com?Subject=CV%20Enquiry" target="_top" class="btn-about">Enquire Now</a>
@@ -100,11 +98,15 @@
                 <h3>Raytheon</h3>
                 <h4>Software Developer</h4>
                 <p>
-                    This current role has been a great learning curve, demonstrating the importance of structured code releases and reviewing other code. I have used my MERN stack skills to build many react applications while integrating these applications to custom API's and mongo and cosmos DB's.<br>
+                    Javascript - React - Node - Git - Azure - Mongo - CI/CD - HTML- CSS
                     <br>
-                    I have been heavly involved in the deployment of new applications which has given me further knowldege in infrastructure. I have also built instances of Jira Service Desk using Azures ARM template again ensuring the infrastructure is locked down.<br>
+                    In my most recent role as a software engineer I developed my skills further in the MERN stack. Working on complex and sensitive web application held within robust and secure cloud infrastructures. All applications were created using the javascript framework react and had a node backend. I built and mainained custom API's in node, enabling us to speak to cosmos databases using mongoose.<br>
                     <br>
-                    Currently working on achieving qualifications in the Microsoft Azure space.
+                    For a period of around two months, there was a buisness need for further infrastructure support. I took lead in this and undertook my certification in Microsoft Azure Fundamentals. This enabled me to streamline the deploymnet of changes to our infrastructure through the use of ARM templates. As security was a focal point, I adapted the infrastructure to ensure that both access and migration of data was encrypted and specified user roles would be able to unencrypt the data.<br>
+                    <br>
+                    I worked in an agile environement, within a scrum team, working both independently and in partnership with other developers to achieve sprint goals. Maintaining CI / CD pipelines to ensure seamless intergration of new features to all environments. These pipelines covered best practices involving linting, unit testing and much more. I also assisted in creating a docker environment for our development space ensuring simplicity for new starters. <br>
+                    <br>
+                    I was the lead in ensuring that all infrastructure and application features and changes were documented, bridging the gap between developers and business analysts. Something I take pride in as it is often overlooked, causing confusion in future feature planning. 
                 </p>
             </div>
             
@@ -156,9 +158,12 @@
 
         <div class="education-block">
             <h3>Microsoft Azure</h3>
-            <span class="education-date">March 2021</span>
+            <span class="education-date">Feburary 2021</span>
             <h4>Microsoft Azure Fundementals</h4>
-            <p>Final Grade 2:1 - This degree combined the best parts of business and computing degrees. By the time I graduated, I understood what makes the business world tick and how information systems are integral to business growth in the 21st century.</p>
+            <p>Achieved my certification in Azure Fundementals.</p>
+            <a href="https://www.credly.com/badges/bd448b0c-4be9-46ba-8cac-9e5d67b87598?source=linked_in_profile" target="_blank">
+                <img src="/Images/azure-fundamentals-600x600.png" alt="" style="padding: 10px; width: 100px; height: 100px;">
+            </a>
         </div> 
 
         <div class="education-block">  
